--- a/about.html
+++ b/about.html
@@ -7227,21 +7227,23 @@ Gaming Art collective and a writer about Virtual Photography."
                         </a>
                       </div>
 
-                      <div
-                        class="header-nav-item header-nav-item--collection header-nav-item--active"
-                      >
+                      <div class="header-nav-item header-nav-item--collection">
                         <a
                           href="about.html"
                           data-animation-role="header-element"
-                          aria-current="page"
                         >
                           Bio
                         </a>
                       </div>
-                    </nav>
-                  </div>
-                </div>
-              </div>
+
+                      <div class="header-nav-item header-nav-item--collection">
+                        <a
+                          href="blog.html"
+                          data-animation-role="header-element"
+                        >
+                          Blog
+                        </a>
+                      </div>
 
               <!-- Actions -->
               <div class="header-actions header-actions--right">
@@ -7407,6 +7409,18 @@ Gaming Art collective and a writer about Virtual Photography."
                           aria-current="page"
                         >
                           Bio
+                        </a>
+                      </div>
+
+                      <div 
+                        class="header-nav-item header-nav-item--collection header-nav-item--active"
+                      >
+                        <a
+                          href="blog.html"
+                          data-animation-role="header-element"
+                          aria-current="page"
+                        >
+                          Blog
                         </a>
                       </div>
                     </nav>
@@ -7700,7 +7714,16 @@ Gaming Art collective and a writer about Virtual Photography."
                       <div class="header-menu-nav-item-content">Bio</div>
                     </a>
                   </div>
-                </div>
+
+                  <div
+                    class="container header-menu-nav-item header-menu-nav-item--collection"
+                  >
+                    <a href="blog.html">
+                      <div class="header-menu-nav-item-content">
+                        Blog
+                    </a>
+                  </div>
+
 
                 <div class="header-menu-actions">
                   <div
