--- a/personal-best.html
+++ b/personal-best.html
@@ -7243,6 +7243,16 @@ meet."
                           Bio
                         </a>
                       </div>
+
+                      <div class="header-nav-item header-nav-item--collection">
+                        <a
+                          href="blog.html"
+                          data-animation-role="header-element"
+                        >
+                          Blog
+                        </a>
+                      </div>
+
                     </nav>
                   </div>
                 </div>
@@ -7413,7 +7423,16 @@ meet."
                         >
                           Bio
                         </a>
+
+                      <div class="header-nav-item header-nav-item--collection">
+                        <a
+                          href="blog.html"
+                          data-animation-role="header-element"
+                        >
+                          Blog
+                        </a>
                       </div>
+
                     </nav>
                   </div>
                 </div>
@@ -7706,6 +7725,14 @@ meet."
                     </a>
                   </div>
                 </div>
+
+                <div
+                class="container header-menu-nav-item header-menu-nav-item--collection"
+              >
+                <a href="blog.html">
+                  <div class="header-menu-nav-item-content">Blog</div>
+                </a>
+              </div>
 
                 <div class="header-menu-actions">
                   <div
